Fixed body wrapping on homepage

--- a/core/static/core/css/index.css
+++ b/core/static/core/css/index.css
@@ -20,6 +20,7 @@
     flex-direction: column;
     justify-content: center;
     border-left: 5px solid var(--mid-blue);
+    padding: 15px 0;
     padding-left: 5%;
     height: 100%;
 }
@@ -34,24 +35,12 @@
     display: -webkit-box;
     -webkit-line-clamp: 7; /* number of lines to show */
     -webkit-box-orient: vertical;
-}
-.blog-body p:first-child {
+    font-size: 1rem;
+    line-height: 1.6rem;
     margin-top: 0;
-}
-.blog-body p:not(:first-child) {
-    display: none;
+    word-break: break-word;
 }
 
-.markdown-container{
-    margin: 0;
-    overflow: hidden;
-    display: inline-block;
-}
-
-.markdown-container *{
-    position: static;
-    display: inline-block;
-}
 
 .blog-image{
     object-fit: cover;
@@ -129,15 +118,10 @@
     display: -webkit-box;
     -webkit-line-clamp: 3;
     -webkit-box-orient: vertical;
-}
-.announcement-description p:first-child {
+    font-size: 1rem;
+    line-height: 1.6rem;
     margin-top: 0;
-}
-.announcement-description p:last-child {
-    margin-bottom: 0;
-}
-.announcement-description .markdown-embed, .announcement-description img {
-    display: none;
+    word-break: break-word;
 }
 hr {
     margin: 10px 0;
